[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/playerTankCanon.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/playerTank.png" type="Texture" id=2]
[ext_resource path="res://entities/Tank.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 28.5 )

[sub_resource type="Animation" id=2]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "dance"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("canon/TankCanon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4375, 0.4375 ), Vector2( 0.538, 0.533 ), Vector2( 0.4375, 0.4375 ) ]
}

[node name="Tank" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.5 )
scale = Vector2( 0.5, 0.445313 )
texture = ExtResource( 2 )

[node name="MainCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="canon" type="Node2D" parent="."]

[node name="TankCanon" type="Sprite" parent="canon"]
position = Vector2( 10, 0 )
scale = Vector2( 0.4375, 0.4375 )
texture = ExtResource( 1 )

[node name="ShootPoint" type="Node2D" parent="canon"]
position = Vector2( 52, 0 )

[node name="shootinSmoke" type="CPUParticles2D" parent="canon"]
position = Vector2( 31, 1 )
emitting = false
lifetime = 0.2
one_shot = true
explosiveness = 0.5
spread = 70.0
initial_velocity = 200.0
scale_amount = 5.0
color = Color( 0.560784, 0, 0.576471, 1 )

[node name="SpawnAnimation" type="AnimationPlayer" parent="."]
anims/spawn = SubResource( 2 )

[node name="DanceAnimation" type="AnimationPlayer" parent="."]
anims/dance = SubResource( 3 )
